syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (InfoUser) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message InfoUser {
    string id  = 2;
    string name = 3;
    string address = 4;
    string message = 1;
}
message Request {
   string id = 1;
   string className = 2;// 类名
   string methodName = 3;// 函数名称
//   Class<?>[] parameterTypes = ;// 参数类型
//   message [] parameters;// 参数列表

}

